# sqlalchemy-bulk

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: update_pypi_package.yml
src/sqlalchemybulk/: __init__.py  crud.py  crud_helper_funcs.py  helper_functions.py  init_or_update_db.py  manager.py
tests/: README.md  __init__.py  test_create_empty_db.py
tests/test_db_crud/: .env.default  __init__.py  alembic.ini  db_test_data.json  test_create_empty_db.py  test_create_update.py  test_delete.py  test_read.py
tests/test_db_crud/alembic/: README  alembic_helpers.py  env.py
tests/test_db_crud/alembic/versions/: 98b679226c66_example_migration_file.txt
tests/test_db_crud/db/: dataModel.py
